--- a/HitomiScrollViewerLib/Views/PageViews/BrowsePage.xaml
+++ b/HitomiScrollViewerLib/Views/PageViews/BrowsePage.xaml
@@ -9,39 +9,143 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     >
-    <!--<Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-            <TextBlock x:Name="BookmarkHeader"
-                        Grid.Column="0"
-                        Style="{StaticResource TitleTextBlockStyle}"
-                        VerticalAlignment="Center" HorizontalAlignment="Left"/>
-            <StackPanel Grid.Column="1"
-                        Orientation="Horizontal"
-                        VerticalAlignment="Bottom" HorizontalAlignment="Center"
-                        Spacing="8">
-                <TextBlock x:Name="BookmarkPageSelectorHeader"
-                            VerticalAlignment="Center"/>
-                <ComboBox x:Name="BookmarkPageSelector"/>
-            </StackPanel>
-            <StackPanel Grid.Column="2"
-                        Orientation="Horizontal"
-                        VerticalAlignment="Bottom" HorizontalAlignment="Right"
-                        Spacing="8">
-                <TextBlock x:Name="BookmarkNumPerPageSelectorHeader"
-                            VerticalAlignment="Center"/>
-                <ComboBox x:Name="BookmarkNumPerPageSelector"
-                            ItemsSource="{x:Bind _bookmarkNumPerPageRange}"
-                            SelectionChanged="BookmarkNumPerPageSelector_SelectionChanged"/>
-            </StackPanel>
+    <Grid ColumnSpacing="8" RowSpacing="8"
+          Padding="16">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <views:TagFilterEditor ViewModel="{x:Bind ViewModel.TagFilterSetEditorVM}"
+                               Grid.Row="0" Grid.RowSpan="2" Grid.Column="0"/>
+        <Grid Grid.Row="0" Grid.Column="1"
+              VerticalAlignment="Stretch"
+              RowSpacing="16"
+                >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <spviews:SyncManager ViewModel="{x:Bind ViewModel.SyncManagerVM}"
+                                 Grid.Row="0"/>
+            <Grid Grid.Row="1"
+                    Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+                    BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+                    CornerRadius="{StaticResource OverlayCornerRadius}"
+                    BorderThickness="1"
+                    RowSpacing="16"
+                    Padding="16"
+                    VerticalAlignment="Stretch">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Button x:Name="HyperlinkCreateButton"
+                        Grid.Row="0"
+                        BorderBrush="DeepPink"
+                        HorizontalAlignment="Stretch"
+                        Padding="16"
+                        Command="{x:Bind ViewModel.HyperlinkCreateButtonCommand}"
+                        >
+                    <TextBlock x:Uid="/SearchPage/HyperlinkCreateButtonTextBlock"
+                                FontSize="{StaticResource SubtitleTextBlockFontSize}"/>
+                </Button>
+                <ListView Grid.Row="1"
+                            ItemsSource="{x:Bind ViewModel.SearchLinkItemVMs}"
+                            SelectionMode="None" IsItemClickEnabled="False">
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Spacing="4" Padding="8"/>
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="spvms:SearchLinkItemVM">
+                            <Grid ColumnSpacing="16"
+                                    ColumnDefinitions="*,Auto"
+                                    RowDefinitions="Auto">
+                                <HyperlinkButton Grid.Column="0"
+                                                    NavigateUri="{x:Bind SearchLink}"
+                                                    HorizontalAlignment="Stretch"
+                                                    HorizontalContentAlignment="Left"
+                                                    VerticalAlignment="Stretch">
+                                    <TextBlock TextWrapping="WrapWholeWords"
+                                                Style="{StaticResource CaptionTextBlockStyle}"
+                                                Text="{x:Bind DisplayText}"/>
+                                </HyperlinkButton>
+                                <AppBarButton Grid.Column="1"
+                                                Command="{x:Bind DeleteCommand}"
+                                                CommandParameter="{x:Bind}">
+                                </AppBarButton>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem" BasedOn="{StaticResource DefaultListViewItemStyle}">
+                            <!--see https://github.com/dotnet/maui/issues/8564
+                                        https://github.com/dotnet/maui/pull/10250
+                                        https://github.com/dotnet/maui/pull/10250/commits/ca8a76576ee3b4f692bd3a3182972120c6c8e071-->
+                            <Setter Property="Padding" Value="0"/>
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                    <ListView.ItemContainerTransitions>
+                        <TransitionCollection/>
+                    </ListView.ItemContainerTransitions>
+                </ListView>
+            </Grid>
         </Grid>
-        <StackPanel x:Name="BookmarkPanel" Orientation="Vertical" Spacing="16"/>
-    
-    -->
-    <Grid>
-        <views:TagFilterEditor/>
+        <StackPanel Grid.Row="1" Grid.Column="1"
+                    Orientation="Vertical"
+                    Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+                    BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+                    CornerRadius="{StaticResource OverlayCornerRadius}"
+                    BorderThickness="1"
+                    Padding="16">
+            <Grid ColumnSpacing="10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <TextBox x:Name="DownloadInputTextBox" x:Uid="/SearchPage/DownloadInputTextBox"
+                         Grid.Column="0"
+                         TextWrapping="Wrap"
+                         AcceptsReturn="True"
+                         Text="{x:Bind ViewModel.DownloadInputText, Mode=TwoWay}"
+                            />
+                <Button x:Name="DownloadButton"
+                        Grid.Column="1" Padding="32"
+                        HorizontalAlignment="Center" VerticalAlignment="Center"
+                        Command="{x:Bind ViewModel.DownloadButtonCommand}">
+                    <SymbolIcon Symbol="Download"/>
+                </Button>
+            </Grid>
+            <ListView x:Name="DownloadItemsListView"
+                      ItemsSource="{x:Bind ViewModel.DownloadManagerVM.DownloadItemVMs}"
+                      SelectionMode="None" IsItemClickEnabled="False">
+                <ListView.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Spacing="4"/>
+                    </ItemsPanelTemplate>
+                </ListView.ItemsPanel>
+                <ListView.ItemTemplate>
+                    <DataTemplate x:DataType="spvms:DownloadItemVM">
+                        <spviews:DownloadItem ViewModel="{x:Bind}"/>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem" BasedOn="{StaticResource DefaultListViewItemStyle}">
+                        <!--see https://github.com/dotnet/maui/issues/8564
+                                    https://github.com/dotnet/maui/pull/10250
+                                    https://github.com/dotnet/maui/pull/10250/commits/ca8a76576ee3b4f692bd3a3182972120c6c8e071-->
+                        <Setter Property="Padding" Value="0"/>
+                    </Style>
+                </ListView.ItemContainerStyle>
+                <ListView.ItemContainerTransitions>
+                    <TransitionCollection/>
+                </ListView.ItemContainerTransitions>
+            </ListView>
+        </StackPanel>
     </Grid>
 </Page>
