--- a/HitomiScrollViewerLib/Views/MainWindow.xaml
+++ b/HitomiScrollViewerLib/Views/MainWindow.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d">
     <StackPanel>
         <SelectorBar SelectionChanged="SelectorBar_SelectionChanged">
-            <SelectorBarItem Text="Search">
+            <SelectorBarItem Text="Search &amp; Download">
                 <SelectorBarItem.Icon>
                     <SymbolIcon Symbol="Find"/>
                 </SelectorBarItem.Icon>
@@ -21,6 +21,11 @@
             <SelectorBarItem Text="View">
                 <SelectorBarItem.Icon>
                     <SymbolIcon Symbol="View"/>
+                </SelectorBarItem.Icon>
+            </SelectorBarItem>
+            <SelectorBarItem Text="Settings">
+                <SelectorBarItem.Icon>
+                    <SymbolIcon Symbol="Setting"/>
                 </SelectorBarItem.Icon>
             </SelectorBarItem>
         </SelectorBar>
