--- a/HitomiScrollViewerLib/Views/ViewPageViews/ImageCollectionPanel.xaml
+++ b/HitomiScrollViewerLib/Views/ViewPageViews/ImageCollectionPanel.xaml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Grid
-    x:Class="HitomiScrollViewerLib.Views.ViewPageViews.GroupedGalleryImagesPanel"
+<StackPanel
+    x:Class="HitomiScrollViewerLib.Views.ViewPageViews.ImageCollectionPanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     xmlns:models="using:HitomiScrollViewerLib.Models"
+    xmlns:entities="using:HitomiScrollViewerLib.Entities"
     FlowDirection="{x:Bind models:CommonSettings.Main.FlowDirectionModel.Value, Mode=OneWay}"
+    HorizontalAlignment="Center"
     >
-</Grid>
+</StackPanel>
