--- a/HitomiScrollViewerLib/Views/SearchPageViews/SyncManager.xaml
+++ b/HitomiScrollViewerLib/Views/SearchPageViews/SyncManager.xaml
@@ -10,8 +10,7 @@
     ColumnDefinitions="*,Auto">
     <Button Grid.Column="0"
             Padding="12 10" HorizontalAlignment="Stretch"
-            Click="{x:Bind ViewModel.SignInBtn_Clicked}"
-            IsEnabled="{x:Bind ViewModel.IsSignInButtonEnabled, Mode=OneWay}">
+            Command="{x:Bind ViewModel.HandleSignInButtonClickCommand}">
         <Grid ColumnSpacing="10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="20"/>
@@ -20,19 +19,16 @@
             <Image Grid.Column="0"
                    Source="/Assets/Google-g-logo.svg"
                    VerticalAlignment="Center"/>
-            <TextBlock x:Name="SignInBtnTextBlock"
-                       Grid.Column="1"
+            <TextBlock Grid.Column="1"
                        TextWrapping="WrapWholeWords"
                        FontSize="16"
                        HorizontalTextAlignment="Center"
                        Text="{x:Bind ViewModel.SignInButtonText, Mode=OneWay}"/>
         </Grid>
     </Button>
-    <Button x:Name="SyncBtn"
-            Grid.Column="1"
+    <Button Grid.Column="1"
             Padding="16"
-            Click="{x:Bind ViewModel.SyncBtn_Clicked}"
-            IsEnabled="{x:Bind ViewModel.IsSyncButtonEnabled}">
+            Command="{x:Bind ViewModel.HandleSyncButtonClickCommand}">
         <SymbolIcon Symbol="Sync"/>
     </Button>
 </Grid>
