--- a/HitomiScrollViewerLib/Views/MainWindow.xaml
+++ b/HitomiScrollViewerLib/Views/MainWindow.xaml
@@ -5,6 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="using:HitomiScrollViewerLib.Models"
+    xmlns:vms="using:HitomiScrollViewerLib.ViewModels"
     mc:Ignorable="d">
     <StackPanel>
         <SelectorBar SelectionChanged="SelectorBar_SelectionChanged">
@@ -35,7 +36,7 @@
                    SizeChanged="RootFrame_SizeChanged"/>
             <ItemsRepeater x:Name="PopupInfoBarItemsRepeater"
                            VerticalAlignment="Bottom" HorizontalAlignment="Center"
-                           ItemsSource="{x:Bind ViewModel.PopupMessages}">
+                           ItemsSource="{x:Bind vms:MainWindowVM.PopupMessages}">
                 <ItemsRepeater.Layout>
                     <StackLayout Spacing="4"/>
                 </ItemsRepeater.Layout>
