--- a/HitomiScrollViewerLib/Views/ViewPageViews/GalleryTabViewItem.xaml
+++ b/HitomiScrollViewerLib/Views/ViewPageViews/GalleryTabViewItem.xaml
@@ -18,7 +18,7 @@
               >
         <FlipView.ItemsPanel>
             <ItemsPanelTemplate>
-                <VirtualizingStackPanel Orientation="{x:Bind models:CommonSettings.Main.ScrollDirection.Value, Mode=OneWay}"/>
+                <VirtualizingStackPanel Orientation="{Binding Source={StaticResource models:CommonSettings.Main}, Path=ScrollDirection.Value, Mode=OneWay}"/>
             </ItemsPanelTemplate>
         </FlipView.ItemsPanel>
         <FlipView.ItemTemplate>
@@ -43,8 +43,8 @@
         <AppBarElementContainer>
             <Slider MinWidth="240"
                     IsTabStop="False"
-                    Minimum="{x:Bind models:GalleryViewSettings.AUTO_SCROLL_INTERVAL_RANGE.Min}"
-                    Maximum="{x:Bind models:GalleryViewSettings.AUTO_SCROLL_INTERVAL_RANGE.Max}"
+                    Minimum="{x:Bind models:GalleryViewSettings.AUTO_SCROLL_INTERVAL_MIN_VALUE}"
+                    Maximum="{x:Bind models:GalleryViewSettings.AUTO_SCROLL_INTERVAL_MAX_VALUE}"
                     TickFrequency="{x:Bind models:GalleryViewSettings.AUTO_SCROLL_INTERVAL_FREQUENCY}"
                     StepFrequency="{x:Bind models:GalleryViewSettings.AUTO_SCROLL_INTERVAL_FREQUENCY}"
                     Value="{x:Bind ViewModel.GalleryViewSettings.AutoScrollInterval, Mode=TwoWay}"
