--- a/HitomiScrollViewerLib/Views/PageViews/ViewPage.xaml
+++ b/HitomiScrollViewerLib/Views/PageViews/ViewPage.xaml
@@ -7,8 +7,7 @@
     xmlns:vpvms="using:HitomiScrollViewerLib.ViewModels.ViewPageVMs"
     xmlns:vpviews="using:HitomiScrollViewerLib.Views.ViewPageViews"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    PreviewKeyDown="ViewPage_PreviewKeyDown">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
     <TabView TabItemsSource="{x:Bind ViewModel.GalleryTabViewItemsVMs}">
         <TabView.TabItemTemplate>
             <DataTemplate x:DataType="vpvms:GalleryTabViewItemVM">
